--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -10,8 +10,8 @@ body {
     background-color: black;
     overflow-x: hidden;
     overflow-y: overlay;
-    width: 100vw;
-    height: 100vh;
+    min-width: 100vw;
+    min-height: 100vh;
 }
 
 #__next {
